# pretix-fontpack-free

./: .gitignore  pretixplugin.toml  pyproject.toml
pretix_fontpackfree/: apps.py  signals.py
