[project]
name = "pretix-fontpack-free-inconsolata"
dynamic = ["version"]
description = "Pack of free fonts for pretix (+ Inconsolata)"
readme = "README.rst"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["pretix"]
authors = [
    {name = "pretix team", email = "support@pretix.eu"},
    {name = "Daniel Malik", email = "mail@fronbasal.de"}
]
maintainers = [
    {name = "pretix team", email = "support@pretix.eu"},
    {name = "Daniel Malik", email = "mail@fronbasal.de"}
]

dependencies = [

]

[project.entry-points."pretix.plugin"]
pretix_fontpackfree = "pretix_fontpackfree:PretixPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[build-system]
requires = [
    "setuptools",
    "pretix-plugin-build",
]

[project.urls]
homepage = "https://github.com/fronbasal/pretix-fontpack-free"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretix_fontpackfree.__version__"}

[tool.setuptools.packages.find]
include = ["pretix*"]
namespaces = false
